`encoding` is a peer dependency of `node-fetch`, so let's redeclare that peer dep here, too

--- a/packages/liveblocks-node/package.json
+++ b/packages/liveblocks-node/package.json
@@ -41,6 +41,9 @@
   "dependencies": {
     "node-fetch": "^2.6.1"
   },
+  "peerDependencies": {
+    "encoding": "*"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/liveblocks/liveblocks.git",
